package healthcalc.multilang;

public interface UnitConverter {
    float convertPeso(float peso);
    float convertAltura(float altura);
    String getUnidadPeso();
    String getUnidadAltura();
}
