@startuml

interface UnitConverter {
    + convertPeso(pesoOriginal: float): float
    + convertAltura(alturaOriginal: float): float
    + getUnidadPeso(): String
    + getUnidadAltura(): String
}

class EuropeanUnitConverter {
    + convertPeso(pesoOriginal: float): float
    + convertAltura(alturaOriginal: float): float
    + getUnidadPeso(): String
    + getUnidadAltura(): String
}

class AmericanUnitConverter {
    + convertPeso(pesoOriginal: float): float
    + convertAltura(alturaOriginal: float): float
    + getUnidadPeso(): String
    + getUnidadAltura(): String
}

UnitConverter <|.. EuropeanUnitConverter
UnitConverter <|.. AmericanUnitConverter

interface BMRStrategy {
    + calculate(peso: float, altura: int, genero: char, edad: int): float
}

class HealthCalculatorBase {
    - strategy: BMRStrategy
    - converter: UnitConverter
    - lastPeso: float
    - lastAltura: float
    - lastBMR: float
    + HealthCalculatorBase(strategy: BMRStrategy, converter: UnitConverter)
    + calculate(pesoOriginal: float, alturaOriginal: float, genero: char, edad: int): float
    + getMessage(): String
}

class HealthCalculatorWithMessageES {
    + getMessage(): String
}

class HealthCalculatorWithMessageEN {
    + getMessage(): String
}

HealthCalculatorWithMessageES --|> HealthCalculatorBase
HealthCalculatorWithMessageEN --|> HealthCalculatorBase
HealthCalculatorBase --> UnitConverter
HealthCalculatorBase --> BMRStrategy

@enduml
